--- a/.gitignore
+++ b/.gitignore
@@ -52,9 +52,10 @@ desktop.ini
 *.tmp
 *.bak
 *.log
+nul
 
-# 图片压缩脚本（仅本地使用）
-compress_images.py
+# 开发脚本目录（仅本地使用）
+scripts/
 
 # Node.js (如果使用)
 node_modules/
